Correction sonar sur Java 11